<resources>
    <string name="app_name">Grabble</string>

    <string name="mapbox_access_token">pk.eyJ1Ijoic3ZhcmExbmlzIiwiYSI6ImNpdW12bmh5MjAwMGMydW8xN2liamxwaHkifQ.-BOn-xkFcCwieq8uctv6NA</string>
    <string name="mapbox_mapref">mapbox://styles/svara1nis/ciumvobkz00ce2inopcds2ije</string>
    <string name="mapbox_mapref_night">mapbox://styles/svara1nis/civ5qulqv003e2il69shqx1vs</string>

    <string name="msg_permissions">Please enable required permissions to use the app!</string>
    <string name="msg_gps_disabled_title">Location not enabled</string>
    <string name="msg_gps_disabled">Please enable location services to use the app!</string>
    <string name="msg_goto_location_settings">Go to location settings...</string>

    <string name="title_activity_backpack">Backpack</string>
    <string name="title_activity_statistics">Statistics</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_about">About</string>

    <!-- Miscellaneous -->

    <!-- Lightning mode -->
    <string name="lightning_title">You have entered the Lightning Mode! Ready?</string>]
    <string name="lightning_no">Maybe later...</string>
    <string name="lightning_yes">LET\'S GO!</string>
    <string name="lightning_toast_completed">You have completed the Lightning Mode and were awarded 200 extra points!</string>
    <string name="lightning_toast_not_completed">You have ran out of time for the Lightning Mode! Better luck next time...</string>

    <!-- Navigation menu (MainActivity) -->
    <string name="nav_backpack">Backpack</string>
    <string name="nav_statistics">Statistics</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_nightmode">Nightmode</string>

    <!-- Backpack -->
    <string name="tab_letter_bag">LETTER BAG</string>
    <string name="tab_word_bag">WORD BAG</string>
    <string name="btn_make_word">Grabble it!</string>

    <!-- Statistics -->
    <string name="stats_travel_distance">Total distance of travel:</string>
    <string name="stats_letter_number">Total letters collected:</string>
    <string name="stats_word_number">Total words formed:</string>
    <string name="stats_highscore">High score:</string>

    <string name="stats_travel_distance_var">Haven\'t travelled yet!</string>
    <string name="stats_letter_number_var">No letters collected yet!</string>
    <string name="stats_word_number_var">No words formed yet!</string>
    <string name="stats_highscore_var">No score yet!</string>

    <!-- Settings -->
    <string name="pref_title_display_name">Your nickname</string>
    <string name="pref_default_display_name">Grabble Player</string>

    <string name="pref_title_night_mode">Automatic night mode</string>
    <string name="pref_summary_night_mode">Switch to night colours between 6.00pm and 8.00am</string>

    <string name="pref_title_about">About</string>

    <!-- About -->
    <string name="about_grabble">Grabble</string>
    <string name="about_version">version: 1.0-alpha.1</string>
    <string name="about_author">author: Vytautas Mizgiris, s1451552</string>
    <string name="about_disclaimer">disclaimer: this project is developed for educational purposes only.</string>
</resources>
