<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapWords"
        android:key="nickname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_display_name" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="nightmode_switch"
        android:summary="@string/pref_summary_night_mode"
        android:title="@string/pref_title_night_mode" />

    <Preference
        android:title="@string/pref_title_about">
        <intent
            android:action="android.intent.action.MAIN"
            android:targetPackage="com.s1451552.grabble"
            android:targetClass="com.s1451552.grabble.AboutActivity"
            />
    </Preference>

</PreferenceScreen>
