<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_backpack"
            android:icon="@drawable/ic_letter_black_24dp"
            android:title="@string/nav_backpack" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_scores_black_24dp"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />
        <item
            android:id="@+id/nav_nightmode"
            android:icon="@drawable/ic_moon_black_24dp"
            android:title="@string/nav_nightmode"
            android:visible="false" />
    </group>
</menu>