<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_statistics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.s1451552.grabble.StatisticsActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/travel_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="@string/stats_travel_distance" />

        <TextView
            android:id="@+id/travel_distance_var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:text="@string/stats_travel_distance_var" />

        <TextView
            android:id="@+id/letter_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/travel_distance"
            android:layout_marginTop="10dp"
            android:text="@string/stats_letter_number" />

        <TextView
            android:id="@+id/letter_number_var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/travel_distance_var"
            android:layout_marginTop="10dp"
            android:text="@string/stats_word_number_var" />

        <TextView
            android:id="@+id/word_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/letter_number"
            android:layout_marginTop="10dp"
            android:text="@string/stats_word_number" />

        <TextView
            android:id="@+id/word_number_var"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/letter_number_var"
            android:layout_marginTop="10dp"
            android:text="@string/stats_word_number_var" />

    </RelativeLayout>
</RelativeLayout>
